shodou/shodou.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: static-index
    site: shodou
  name: shodou-deployment
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      type: static-index
      site: shodou
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: static-index
        site: shodou
    spec:
      containers:
      - image: c8n.io/robotarmy/shodou-site:0.1
        imagePullPolicy: IfNotPresent
        name: shodou-site
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 8Mi
          requests:
            cpu: 200m
            memory: 4Mi
      imagePullSecrets:
      - name: c8n-robotarmy
      restartPolicy: Always
