shodou/shodou-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    site: shodou
  name: shodou-service
  namespace: apps
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    site: shodou
status:
  loadBalancer: {}
