shodou/shodou.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shodou-service
  namespace: apps
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    site: shodou
    type: static-index
status:
  loadBalancer: {}
