shodou/shodou-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels: 
    site: shodou
  name: shodou-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: test.xn--7brq03m.net
    http:
      paths:
      - backend:
          service:
            name: shodou-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: xn--7brq03m.net
    http:
      paths:
      - backend:
          service:
            name: shodou-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    # 初道.net
    - xn--7brq03m.net
    - test.xn--7brq03m.net
    secretName: tls-net-xn--7brq03m
